# PyTorch-LSTM-Forecaster

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LEARNING.md  Makefile  README.md  pyproject.toml  requirements.txt
.claude/: settings.json
.github/: pull_request_template.md
.github/workflows/: ci.yml
config/: config.yaml
hf_space/: app.py  requirements.txt
reports/: metrics.json
research-notes/: approach.md
src/: exceptions.py  logger.py
src/api/: app.py  gradio_demo.py
src/data/: dataloader.py  dataset.py  eda.py  preprocessing.py  schemas.py  torch_dataset.py  validation.py
src/evaluation/: evaluate.py
src/models/: base.py  lstm.py
src/training/: train.py
tests/: test_api.py  test_dataset.py  test_evaluate.py  test_model.py  test_pipeline.py  test_scaffold.py  test_train.py
utils/: seed.py
